# python-jupyter-devcontainer

./: LICENSE  README.md  launch.sh  pyproject.toml
.devcontainer/: devcontainer.json  onCreate.sh
working/: example.ipynb
working/data/: contries.csv
