[tool.poetry]
name = "helpers"
version = "0.1"
description = ""
authors = ["John Bull <john.bull@nzta.govt.nz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.4.8"
pandas = "^1.5.0"
numpy = "^1.23.4"
matplotlib = "^3.6.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.8.0"
flake8 = "^5.0.4"
mypy = "^0.982"
autopep8 = "^1.7.0"
pycodestyle = "^2.9.1"
pydocstyle = "^6.1.1"
pylint = "^2.15.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
